--- a/package.json
+++ b/package.json
@@ -3,21 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --port 3000",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
     "@babel/polyfill": "^7.11.5",
+    "@stomp/stompjs": "^6.1.2",
+    "@vue/compat": "^3.2.13",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.23.1",
     "core-js": "^3.8.3",
     "mutationobserver-shim": "^0.3.7",
+    "pinia": "^2.0.23",
+    "pinia-plugin-persist": "^1.0.0",
     "popper.js": "^1.16.1",
     "portal-vue": "^2.1.7",
+    "sockjs-client": "^1.6.1",
     "vue": "^3.2.13",
-    "@vue/compat": "^3.2.13",
-    "vue-router": "^4.1.5"
+    "vue-router": "^4.1.5",
+    "vue-uuid": "^3.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
