--- a/package.json
+++ b/package.json
@@ -21,8 +21,7 @@
     "portal-vue": "^2.1.7",
     "sockjs-client": "^1.6.1",
     "vue": "^3.2.13",
-    "vue-router": "^4.1.5",
-    "vue-uuid": "^3.0.0"
+    "vue-router": "^4.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
