--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@vue/compat": "^3.2.13",
     "bootstrap": "^4.5.2",
     "bootstrap-vue": "^2.23.1",
+    "canvas-confetti": "^1.6.0",
     "core-js": "^3.8.3",
     "mutationobserver-shim": "^0.3.7",
     "pinia": "^2.0.23",
